--- a/index.html
+++ b/index.html
@@ -1,63 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>July A/C</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-
-  <!-- Hero Section -->
-  <header class="hero">
-    <div class="hero-content">
-      <h1>July: Your window’s coolest friend</h1>
-      <p>The modern Window A/C you'll love, delivered & installed</p>
-      <a href="#shop" class="btn">Shop July A/C</a>
-    </div>
-  </header>
-
-  <!-- How It Works -->
-  <section class="features">
-    <h2>July is easier</h2>
-    <div class="feature-grid">
-      <div><h3>Ridiculously easy to install</h3><p>Our patented frame makes setup safer and quicker.</p></div>
-      <div><h3>Wi-Fi & Smart</h3><p>Control July via app, Alexa, or Google Home.</p></div>
-      <div><h3>Pro Installation</h3><p>White‑glove install available nationwide.</p></div>
-      <div><h3>Accessories</h3><p>Custom filters, panels & more to enhance your experience.</p></div>
-      <div><h3>Kinder to the environment</h3><p>2/3 less emissions and 10% less energy.</p></div>
-    </div>
-  </section>
-
-  <!-- Gallery -->
-  <section id="gallery" class="gallery">
-    <h2>Match July to your style</h2>
-    <p>2 sizes · 3 materials · 7 colors · Starts at $399</p>
-    <div class="gallery-grid">
-      <img src="images/white.jpg" alt="White July">
-      <img src="images/cloud.jpg" alt="Cloud July">
-      <img src="images/forest.jpg" alt="Forest Green July">
-      <img src="images/rose.jpg" alt="Rose July">
-      <img src="images/skyblue.jpg" alt="Sky Blue July">
-      <img src="images/linen.jpg" alt="Linen July">
-      <img src="images/wood.jpg" alt="Wood July">
-    </div>
-  </section>
-
-  <!-- Guarantees -->
-  <section class="guarantees">
-    <h2>July's Buyer Guarantees</h2>
-    <ul>
-      <li><strong>30‑Day Trial</strong> – full refund if you’re not satisfied.</li>
-      <li><strong>1‑Year Warranty</strong> – defects are covered.</li>
-      <li><strong>Easy Returns</strong> – box designed for repackaging, return at cost.</li>
-    </ul>
-  </section>
-
-  <!-- Footer -->
-  <footer>
-    <p>&copy; 2025 July A/C • Follow us on [social icons]</p>
-  </footer>
-
-</body>
-</html>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Happiness Program</title>
+    <style>
+      body {
+        font-family: system-ui, sans-serif;
+        margin: 0;
+        padding: 0;
+        background: #fffaf3;
+        color: #4a2e12;
+        text-align: center;
+      }
+      .date {
+        display: inline-block;
+        background: #8b4c00;
+        color: white;
+        padding: 8px 16px;
+        border-radius: 30px;
+        margin: 10px auto;
+        font-weight: bold;
+      }
+      .container {
+        padding: 2rem;
+      }
+      .location {
+        background: #fff;
+        margin-top: 1rem;
+        padding: 1rem;
+        border-radius: 12px;
+        box-shadow: 0 4px 10px rgba(0,0,0,0.05);
+        display: inline-block;
+      }
+      a {
+        color: #8b4c00;
+        text-decoration: none;
+        font-weight: bold;
+      }
+      a:hover {
+        text-decoration: underline;
+      }
+      img {
+        width: 100%;
+        max-width: 600px;
+        border-radius: 20px;
+        margin-top: 1rem;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="container">
+      <h1>Happiness Program<
