--- a/index.html
+++ b/index.html
@@ -1,54 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Happiness Program</title>
-    <style>
-      body {
-        font-family: system-ui, sans-serif;
-        margin: 0;
-        padding: 0;
-        background: #fffaf3;
-        color: #4a2e12;
-        text-align: center;
-      }
-      .date {
-        display: inline-block;
-        background: #8b4c00;
-        color: white;
-        padding: 8px 16px;
-        border-radius: 30px;
-        margin: 10px auto;
-        font-weight: bold;
-      }
-      .container {
-        padding: 2rem;
-      }
-      .location {
-        background: #fff;
-        margin-top: 1rem;
-        padding: 1rem;
-        border-radius: 12px;
-        box-shadow: 0 4px 10px rgba(0,0,0,0.05);
-        display: inline-block;
-      }
-      a {
-        color: #8b4c00;
-        text-decoration: none;
-        font-weight: bold;
-      }
-      a:hover {
-        text-decoration: underline;
-      }
-      img {
-        width: 100%;
-        max-width: 600px;
-        border-radius: 20px;
-        margin-top: 1rem;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="container">
-      <h1>Happiness Program<
+<head>
+  <meta charset="UTF-8">
+  <title>Happiness Program</title>
+  <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+<body>
+  <div class="center-box">
+    <h1>Happiness Program</h1>
+    <p><strong>With Vishal Ji & Vikram Ji</strong><br>
+    25th to 27th Jul, 2025</p>
+
+    <p><strong>Art of Living International Center</strong><br>
+    21st KM, Udayapura Post,<br>
+    Kanakapura Main Rd,<br>
+    Bengaluru, Karnataka 560082</p>
+
+    <h2>Program Timeline</h2>
+    <p>
+      <strong>Check-in From:</strong> 24th Jul 2025, 2:00 pm<br>
+      <strong>Program Starts:</strong> 25th Jul 2025 @ 9:30 am<br>
+      <strong>Program Ends:</strong> 27th Jul 2025 @ 5:00 pm<br>
+      <strong>Checkout By:</strong> 28th Jul 2025, 9:30 am
+    </p>
+
+    <a class="register-btn" href="https://programs.vvmvp.org/events/553/" tar
