--- a/index.html
+++ b/index.html
@@ -3,26 +3,36 @@
 <head>
   <meta charset="UTF-8">
   <title>Happiness Program</title>
-  <link rel="stylesheet" href="style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
-<body>
-  <div class="center-box">
-    <h1>Happiness Program</h1>
-    <p><strong>With Vishal Ji & Vikram Ji</strong><br>
-    25th to 27th Jul, 2025</p>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background: #fefaf5;
+      font-family: sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+    }
 
-    <p><strong>Art of Living International Center</strong><br>
-    21st KM, Udayapura Post,<br>
-    Kanakapura Main Rd,<br>
-    Bengaluru, Karnataka 560082</p>
+    .container {
+      max-width: 600px;
+      background: #fff;
+      padding: 30px;
+      border-radius: 16px;
+      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.08);
+      text-align: center;
+    }
 
-    <h2>Program Timeline</h2>
-    <p>
-      <strong>Check-in From:</strong> 24th Jul 2025, 2:00 pm<br>
-      <strong>Program Starts:</strong> 25th Jul 2025 @ 9:30 am<br>
-      <strong>Program Ends:</strong> 27th Jul 2025 @ 5:00 pm<br>
-      <strong>Checkout By:</strong> 28th Jul 2025, 9:30 am
-    </p>
+    h1 {
+      color: #4b2e0f;
+      margin-bottom: 8px;
+    }
 
-    <a class="register-btn" href="https://programs.vvmvp.org/events/553/" tar
+    p {
+      color: #444;
+      line-height: 1.6;
+    }
+
+    a
