--- a/index.html
+++ b/index.html
@@ -1,38 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Happiness Program</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
-      margin: 0;
-      padding: 0;
-      background: #fefaf5;
-      font-family: sans-serif;
+      background-color: #fef9f2;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       display: flex;
       justify-content: center;
       align-items: center;
       min-height: 100vh;
-    }
-
-    .container {
-      max-width: 600px;
-      background: #fff;
-      padding: 30px;
-      border-radius: 16px;
-      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.08);
+      margin: 0;
+      padding: 1rem;
+      color: #432818;
       text-align: center;
     }
-
+    .container {
+      max-width: 600px;
+      background-color: #fff8ef;
+      padding: 2rem;
+      border-radius: 1rem;
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+    }
     h1 {
-      color: #4b2e0f;
-      margin-bottom: 8px;
+      font-size: 2rem;
+      margin-bottom: 0.5rem;
     }
-
+    h2 {
+      font-size: 1.25rem;
+      font-weight: normal;
+      margin-bottom: 1rem;
+    }
     p {
-      color: #444;
-      line-height: 1.6;
+      margin: 0.5rem 0;
+      line-height: 1.5;
     }
+    a.button, .share-btn {
+      display: inline-block;
+      margin-top: 1rem;
+      background-color: #8b4513;
+      color: white;
+      padding: 0.75rem 1.25rem;
+      border-radius: 0.5rem;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    .qr {
+      margin-top: 1.5rem;
+    }
+    .social-share {
+      margin-top: 1rem;
+    }
+    .social-share a {
+      margin: 0 0.5rem;
+      font-size: 1.2rem;
+      color: #8b4513;
+      text-decoration: none;
+    }
+    .map-link {
+      display: block;
+      margin-top: 1rem;
+      font-size: 0.95rem;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h1>Happiness Program</h1>
+    <h2>With Vishal Ji & Vikram Ji</h2>
+    <p><strong>25th to 27th Jul, 2025</strong></p>
 
-    a
+    <p><strong>Location:</strong><br>
+      Art of Living International Center<br>
+      21st KM, Udayapura Post, Kanakapura Main Rd,<br>
+      Bengaluru, Karnataka 560082
+    </p>
+    <a class="map-link" href="https://www.google.com/search?sca_esv=d22a87f29702b322&hl=en&gl=in&output=search&kgmid=/g/11g6nvzp2f&q=Art+of+Living+International+Center&shndl=30&shem=lcuae,uaasie&source=sh/x/loc/uni/m1/1&kgs=6dc7468a51607c41" target="_blank">
+      📍 View on Google Maps
+    </a>
+
+    <p><strong>Program Timeline</strong></p>
+    <p>Check-in From → 24th Jul 2025, 2:00 pm</p>
+    <p>Program Starts → 25th Jul 2025 @ 9:30 am</p>
+    <p>Program Ends → 27th Jul 2025 @ 5:00 pm</p>
+    <p>Checkout By → 28th Jul 2025, 9:30 am</p>
+
+    <a class="button" href="https://programs.vvmvp.org/events/553/" target="_blank">Register Today</a>
+
+    <div class="qr">
+      <img src="https://api.qrserver.com/v1/create-qr-code/?data=https://programs.vvmvp.org/events/553/&size=200x200" alt="QR code for registration" />
+    </div>
+
+    <div class="social-share">
+      <p><strong>Share this program:</strong></p>
+      <a href="https://api.whatsapp.com/send?text=Join%20me%20for%20the%20Happiness%20Program%20with%20Vishal%20Ji%20%26%20Vikram%20Ji%20from%2025th%20to%2027th%20July%202025!%20Register%20here%3A%20https%3A%2F%2Fprograms.vvmvp.org%2Fevents%2F553%2F" target="_blank">📱 WhatsApp</a>
+      <a href="https://www.instagram.com/" target="_blank">📸 Instagram</a>
+    </div>
+  </div>
+</body>
+</html>
