--- a/index.html
+++ b/index.html
@@ -1,110 +1,128 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Happiness Program</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
       padding: 0;
-      background: #fefaf5;
-      font-family: sans-serif;
+      background: #fcf9f4;
+      font-family: 'Inter', sans-serif;
       display: flex;
       justify-content: center;
       align-items: center;
       min-height: 100vh;
+      color: #333;
     }
 
     .container {
-      max-width: 600px;
-      background: #fff;
-      padding: 30px;
-      border-radius: 16px;
-      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.08);
+      max-width: 500px;
+      background: #ffffff;
+      padding: 24px;
+      border-radius: 12px;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.05);
       text-align: center;
     }
 
     h1 {
+      font-size: 1.4rem;
+      font-weight: 600;
+      margin-bottom: 0.5rem;
       color: #4b2e0f;
-      margin-bottom: 8px;
     }
 
     p {
-      color: #444;
-      line-height: 1.6;
+      font-size: 0.92rem;
+      line-height: 1.4;
+      margin: 0.4rem 0;
     }
 
-    a.register {
+    a.button {
       display: inline-block;
-      margin-top: 20px;
-      padding: 12px 24px;
-      background: #8b4c00;
+      margin-top: 1.2rem;
+      padding: 10px 20px;
+      background-color: #8b4c00;
       color: white;
       text-decoration: none;
-      border-radius: 24px;
-      font-weight: bold;
+      border-radius: 6px;
+      font-size: 0.9rem;
+      font-weight: 600;
+      transition: background 0.2s ease;
     }
 
-    a.register:hover {
-      background: #6e3c00;
-    }
-
-    .map-link {
-      display: block;
-      margin: 12px 0;
-      font-size: 0.95rem;
-      color: #0077cc;
-      text-decoration: none;
+    a.button:hover {
+      background-color: #6e3c00;
     }
 
     .qr {
-      margin-top: 20px;
+      margin-top: 1.5rem;
+    }
+
+    .qr img {
+      width: 150px;
+      height: 150px;
+    }
+
+    .map-link {
+      display: inline-block;
+      margin-top: 0.5rem;
+      font-size: 0.85rem;
+      color: #0073cc;
+      text-decoration: none;
+    }
+
+    .map-link:hover {
+      text-decoration: underline;
     }
 
     .social-share {
-      margin-top: 20px;
+      margin-top: 1.2rem;
+      font-size: 0.85rem;
     }
 
     .social-share a {
-      margin: 0 8px;
+      margin: 0 6px;
       text-decoration: none;
       color: #8b4c00;
-      font-weight: bold;
+      font-weight: 500;
+    }
+
+    .social-share a:hover {
+      text-decoration: underline;
     }
   </style>
 </head>
 <body>
   <div class="container">
     <h1>Happiness Program</h1>
-    <p><strong>With Vishal Ji & Vikram Ji</strong><br>
-    25th to 27th Jul, 2025</p>
+    <p><strong>With Vishal Ji & Vikram Ji</strong><br>25th to 27th Jul, 2025</p>
 
-    <p><strong>Art of Living International Center</strong><br>
-    21st KM, Udayapura Post,<br>
-    Kanakapura Main Rd,<br>
-    Bengaluru, Karnataka 560082</p>
-
+    <p><strong>Venue:</strong><br>
+      Art of Living International Center<br>
+      Kanakapura Road, Bengaluru
+    </p>
     <a class="map-link" href="https://www.google.com/search?q=Art+of+Living+International+Center+Bengaluru" target="_blank">📍 View on Google Maps</a>
 
-    <p><strong>Program Timeline</strong><br><br>
-    <strong>Check-in From:</strong> 24th Jul 2025, 2:00 pm<br>
-    <strong>Program Starts:</strong> 25th Jul 2025 @ 9:30 am<br>
-    <strong>Program Ends:</strong> 27th Jul 2025 @ 5:00 pm<br>
-    <strong>Checkout By:</strong> 28th Jul 2025, 9:30 am</p>
+    <p><strong>Timeline:</strong><br>
+      Check-in: 24 Jul 2025, 2:00 pm<br>
+      Starts: 25 Jul @ 9:30 am<br>
+      Ends: 27 Jul @ 5:00 pm<br>
+      Checkout: 28 Jul, 9:30 am
+    </p>
 
-    <a class="register" href="https://programs.vvmvp.org/events/553/" target="_blank">
-      Register Today
-    </a>
+    <a class="button" href="https://programs.vvmvp.org/events/553/" target="_blank">Register Now</a>
 
     <div class="qr">
-      <img src="https://api.qrserver.com/v1/create-qr-code/?data=https://programs.vvmvp.org/events/553/&size=200x200" alt="QR Code">
+      <img src="https://api.qrserver.com/v1/create-qr-code/?data=https://programs.vvmvp.org/events/553/&size=150x150" alt="QR Code" />
     </div>
 
     <div class="social-share">
       <p><strong>Share:</strong></p>
-      <a href="https://api.whatsapp.com/send?text=Join%20me%20for%20the%20Happiness%20Program%20with%20Vishal%20Ji%20%26%20Vikram%20Ji%20from%2025th%20to%2027th%20July%202025!%20Register%20here:%20https://programs.vvmvp.org/events/553/" target="_blank">📱 WhatsApp</a>
-      <a href="https://www.instagram.com" target="_blank">📸 Instagram</a>
+      <a href="https://api.whatsapp.com/send?text=Join%20me%20for%20Happiness%20Program%20with%20Vishal%20Ji%20%26%20Vikram%20Ji%2C%2025–27%20Jul%2C%20Bengaluru!%20https%3A%2F%2Fprograms.vvmvp.org%2Fevents%2F553%2F" target="_blank">WhatsApp</a>
+      <a href="https://www.instagram.com/" target="_blank">Instagram</a>
     </div>
   </div>
 </body>
