--- a/index.html
+++ b/index.html
@@ -127,14 +127,33 @@
       Register Now
     </a>
 
-    <div class="share-row">
-      <a href="https://api.whatsapp.com/send?text=Join%20me%20for%20the%20Happiness%20Program%20with%20Vishal%20Ji%20%26%20Vikram%20Ji%20%7C%2025–27%20July%202025%20at%20Art%20of%20Living%20Intl%20Center%20%7C%20https%3A%2F%2Fprograms.vvmvp.org%2Fevents%2F553%2F" target="_blank">💬</a>
-      <a href="https://www.instagram.com/" target="_blank">📸</a>
-      <a href="#" onclick="copyLink()">🔗</a>
-    </div>
+<div class="share-row">
+  <a href="https://api.whatsapp.com/send?text=Join%20me..." target="_blank" title="Share on WhatsApp">
+    <svg width="24" height="24" fill="#8b4c00" viewBox="0 0 24 24">
+      <path d="M12.04 2C6.55 2 2 6.54 2 12.01c0 1.77.46 3.42 1.27 4.86L2 22l5.26-1.24A9.98 9.98 0 0 0 12.04 22C17.52 22 22 17.47 22 12S17.52 2 12.04 2zm0 18.18c-1.59 0-3.11-.45-4.41-1.22l-.31-.19-3.12.74.66-3.04-.2-.32A8.11 8.11 0 0 1 3.84 12c0-4.54 3.66-8.22 8.2-8.22S20.24 7.46 20.24 12s-3.66 8.18-8.2 8.18zm4.48-6.18c-.25-.13-1.47-.73-1.7-.82s-.4-.13-.57.12c-.17.25-.65.82-.8.98-.15.17-.3.19-.55.06-.25-.13-1.04-.38-1.99-1.22-.74-.65-1.24-1.45-1.38-1.7-.14-.25-.01-.39.12-.52.13-.13.25-.3.38-.45.13-.15.17-.25.25-.42.08-.17.04-.32-.02-.45-.07-.13-.57-1.38-.78-1.88-.21-.5-.42-.43-.57-.43-.15 0-.32-.01-.49-.01s-.45.06-.69.32-.91.9-.91 2.2c0 1.3.93 2.57 1.06 2.75.13.17 1.82 2.9 4.42 4.06.62.27 1.1.43 1.48.55.62.2 1.18.17 1.62.1.5-.07 1.47-.6 1.68-1.18.21-.58.21-1.08.15-1.18-.06-.1-.23-.17-.49-.3z"/>
+    </svg>
+  </a>
 
-    <div class="copy" onclick="copyDetails()">📋 Copy Program Details</div>
-  </div>
+  <a href="https://www.instagram.com/" target="_blank" title="View on Instagram">
+    <svg width="24" height="24" fill="#8b4c00" viewBox="0 0 24 24">
+      <path d="M7 2C4.243 2 2 4.243 2 7v10c0 2.757 2.243 5 5 5h10c2.757 0 5-2.243 5-5V7c0-2.757-2.243-5-5-5H7zm10 2c1.654 0 3 1.346 3 3v10c0 1.654-1.346 3-3 3H7c-1.654 0-3-1.346-3-3V7c0-1.654 1.346-3 3-3h10zm-5 3a5 5 0 1 0 .001 10.001A5 5 0 0 0 12 7zm0 2a3 3 0 1 1 0 6 3 3 0 0 1 0-6zm4.5-2a1 1 0 1 0 .002 2.002A1 1 0 0 0 16.5 7z"/>
+    </svg>
+  </a>
+
+  <a href="#" onclick="copyLink()" title="Copy Link">
+    <svg width="24" height="24" fill="#8b4c00" viewBox="0 0 24 24">
+      <path d="M3.9 12a5 5 0 0 1 5-5h4v2H8.9a3 3 0 1 0 0 6H13v2H8.9a5 5 0 0 1-5-5zm6-1h4v2h-4v-2zm10.1 1a5 5 0 0 1-5 5H11v-2h3.1a3 3 0 0 0 0-6H11V7h3.1a5 5 0 0 1 5 5z"/>
+    </svg>
+  </a>
+
+  <a href="#" onclick="copyDetails()" title="Copy Details">
+    <svg width="24" height="24" fill="#8b4c00" viewBox="0 0 24 24">
+      <path d="M3 3h12a1 1 0 0 1 1 1v3h-2V5H4v14h10v-2h2v3a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1zm16 6h-6v2h4v2h-4v2h6v-6z"/>
+    </svg>
+  </a>
+</div>
+
+
 
   <script>
     function copyLink() {
