--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
     </div>
 
     <div class="timeline">
-      <div>🕑 <strong>Check-in:</strong> 24 Jul, 2:00 pm</div>
-      <div>✨ <strong>Start:</strong> 25 Jul, 9:30 am</div>
-      <div>🌇 <strong>End:</strong> 27 Jul, 5:00 pm</div>
-      <div>🚪 <strong>Checkout:</strong> 28 Jul, 9:30 am</div>
+      <div> <strong>Check-in:</strong> 24 Jul, 2:00 pm</div>
+      <div> <strong>Start:</strong> 25 Jul, 9:30 am</div>
+      <div> <strong>End:</strong> 27 Jul, 5:00 pm</div>
+      <div> <strong>Checkout:</strong> 28 Jul, 9:30 am</div>
     </div>
 
     <div id="countdown">⏳ Loading countdown…</div>
